--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1889,20 +1889,27 @@
 "package_period_x_months" = "%d أشهر";
 "invitation_share_message" = "أدعوك إلى لايف بوكسLifeebox ، قم بتسجيل اسمك وابدأ في استخدام مساحة تخزين 5 جيجا بايت. وكذلك قم بدعوة شخص آخر واكسب المزيد!";
 "profile_recovery_email_is_same_with_account_email" = "لا يمكن أن يكون البريد الإلكتروني للاسترداد والبريد الإلكتروني للملف الشخصي متماثلين.";
-"forgotMyPassword_your_account_email" = "";
-"forgotMyPassword_enter_your_account_email" = "";
-"forgotMyPassword_instructions" = "";
-"forgotMyPassword_enter_valid_email" = "";
-"forgotMyPassword_instructions_other" = "";
-"forgotMyPassword_reset_button" = "";
-"forgotMyPassword_challange1_header" = "";
-"forgotMyPassword_challange1_body" = "";
-"forgotMyPassword_phone_number" = "";
-"forgotMyPassword_mail" = "";
-"forgotMyPassword_recovery_mail" = "";
-"forgotMyPassword_security_question" = "";
-"forgotMyPassword_continue" = "";
-"forgotMyPassword_email_popup_message" = "";
-"forgotMyPassword_challange2_header" = "";
-"forgotMyPassword_challange2_body" = "";
+"forgotMyPassword_your_account_email" = "البريد الإلكتروني أو رقم الهاتف الخاص بحسابك";
+"forgotMyPassword_enter_your_account_email" = "قم بإدخال البريد الإلكتروني أو رقم الهاتف  الخاص بحسابك";
+"forgotMyPassword_instructions" = "لإعادة تعيين كلمة المرور الخاصة بك ، سنرسل رابط إعادة تعيين كلمة المرور إلى عنوان البريد الإلكتروني أو رقم الهاتف الخاص بحسابك:";
+"forgotMyPassword_enter_valid_email" = "الرجاء إدخال بريد إلكتروني أو رقم هاتف صالح";
+"forgotMyPassword_instructions_other" = "يمكنك إعادة تعيين كلمة المرور الخاصة بك عن طريق النقر فوق الارتباط الذي سنرسله إلى عنوان البريد الإلكتروني أو رقم الهاتف الخاص بحسابك.";
+"forgotMyPassword_reset_button" = "إعادة تعيين كلمة المرور";
+"forgotMyPassword_challange1_header" = "اختر طريقة التحقق";
+"forgotMyPassword_challange1_body" = "أي من طرق التحقق التالية ترغب في متابعة سريان تجديد كلمة المرور؟";
+"forgotMyPassword_phone_number" = "رقم الهاتف";
+"forgotMyPassword_mail" = "بريد إلكتروني";
+"forgotMyPassword_recovery_mail" = "البريد الإلكتروني لاسترداد";
+"forgotMyPassword_security_question" = "سؤال الامان";
+"forgotMyPassword_continue" = "استمر";
+"forgotMyPassword_email_popup_message" = "لقد أرسلنا رابط إعادة تعيين كلمة المرور إلى عنوان بريدك الإلكتروني٪@ لتتمكن من إعادة تعيين كلمة مرورك.";
+"forgotMyPassword_challange2_header" = "اختر طريقة التحقق";
+"forgotMyPassword_challange2_body" = "أي من طرق التحقق التالية ترغب في متابعة سريان تجديد كلمة المرور؟";
 "masterpass_feature_package_cancel" = "لإلغاء الباقة الخاصة بك، يرجى زيارة موقع\nwww.mylifebox.com";
+"forgotMyPassword_password_complete" = "تمام";
+"forgotMyPassword_reset_success_message" = "لقد تمت عملية إعادة تعيين كلمة المرور الخاصة بك بنجاح.";
+"forgotMyPassword_account_not_found" = "";
+"forgotMyPassword_SQ_invalid_answer" = "";
+
+/*Photo/Video File Description*/
+"photo_video_detail_file_description" = "";
