--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1877,20 +1877,27 @@
 "package_period_x_months" = "%d monate";
 "invitation_share_message" = "Ich lade Sie zu lifebox ein, registrieren Sie sich und nutzen Sie den 5 GB Speicherplatz.";
 "profile_recovery_email_is_same_with_account_email" = "Die Wiederherstellungs-E-Mail und die Profil-E-Mail können nicht identisch sein.";
-"forgotMyPassword_your_account_email" = "";
-"forgotMyPassword_enter_your_account_email" = "";
-"forgotMyPassword_instructions" = "";
-"forgotMyPassword_enter_valid_email" = "";
-"forgotMyPassword_instructions_other" = "";
-"forgotMyPassword_reset_button" = "";
-"forgotMyPassword_challange1_header" = "";
-"forgotMyPassword_challange1_body" = "";
-"forgotMyPassword_phone_number" = "";
-"forgotMyPassword_mail" = "";
-"forgotMyPassword_recovery_mail" = "";
-"forgotMyPassword_security_question" = "";
-"forgotMyPassword_continue" = "";
-"forgotMyPassword_email_popup_message" = "";
-"forgotMyPassword_challange2_header" = "";
-"forgotMyPassword_challange2_body" = "";
+"forgotMyPassword_your_account_email" = "E-Mail oder Telefonnummer Ihres Kontos";
+"forgotMyPassword_enter_your_account_email" = "Geben Sie die E-Mail-Adresse oder Telefonnummer Ihres Kontos ein";
+"forgotMyPassword_instructions" = "Um Ihr Passwort zurückzusetzen, senden wir Ihnen einen Link zum Zurücksetzen des Passworts an die E-Mail-Adresse oder Telefonnummer Ihres Kontos:";
+"forgotMyPassword_enter_valid_email" = "Bitte geben Sie eine gültige E-Mail-Adresse oder Telefonnummer ein";
+"forgotMyPassword_instructions_other" = "Sie können Ihr Passwort zurücksetzen, indem Sie auf den Link klicken, den wir an die E-Mail-Adresse oder Telefonnummer Ihres Kontos senden.";
+"forgotMyPassword_reset_button" = "Passwort Zurücksetzen";
+"forgotMyPassword_challange1_header" = "Verifizierungsmethode Wählen";
+"forgotMyPassword_challange1_body" = "Welche der folgenden Verifizierungsmethoden möchten Sie bei der Erneuerung des Passworts verwenden?";
+"forgotMyPassword_phone_number" = "Telefonnummer";
+"forgotMyPassword_mail" = "E-Mail";
+"forgotMyPassword_recovery_mail" = "Wiederherstellungs - E-Mail";
+"forgotMyPassword_security_question" = "Sicherheitsfrage";
+"forgotMyPassword_continue" = "Weiter";
+"forgotMyPassword_email_popup_message" = "Wir haben Ihnen einen Link zum Zurücksetzen des Passworts an Ihre %@-E-Mail-Adresse geschickt, damit Sie Ihr Passwort zurücksetzen können.";
+"forgotMyPassword_challange2_header" = "Verifizierungsmethode Wählen";
+"forgotMyPassword_challange2_body" = "Mit welcher der folgenden Verifizierungsmethoden möchten Sie den Vorgang der Kennworterneuerung fortsetzen?";
 "masterpass_feature_package_cancel" = "Um Ihr Paket zu stornieren, besuchen Sie bitte www.mylifebox.com";
+"forgotMyPassword_password_complete" = "OK";
+"forgotMyPassword_reset_success_message" = "Ihr Passwort-Reset wurde erfolgreich abgeschlossen.";
+"forgotMyPassword_account_not_found" = "";
+"forgotMyPassword_SQ_invalid_answer" = "";
+
+/*Photo/Video File Description*/
+"photo_video_detail_file_description" = "";
