--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1917,22 +1917,29 @@
 "profile_recovery_email_empty" = "El correo electrónico de recuperación está vacío";
 "profile_recovery_email_invalid" = "El correo de recuperación no es válido";
 "package_period_x_months" = "%d meses";
-"invitation_share_message" = "Te invito a lifebox, regístrate y comienza a usar 5GB de almacenamiento.";
+"invitation_share_message" = "Te han enviado 5GB de almacenamiento en lifebox, haz clic para canjearlo";
 "profile_recovery_email_is_same_with_account_email" = "El correo electrónico de recuperación y el correo electrónico del perfil no pueden ser iguales.";
-"forgotMyPassword_your_account_email" = "";
-"forgotMyPassword_enter_your_account_email" = "";
-"forgotMyPassword_instructions" = "";
-"forgotMyPassword_enter_valid_email" = "";
-"forgotMyPassword_instructions_other" = "";
-"forgotMyPassword_reset_button" = "";
-"forgotMyPassword_challange1_header" = "";
-"forgotMyPassword_challange1_body" = "";
-"forgotMyPassword_phone_number" = "";
-"forgotMyPassword_mail" = "";
-"forgotMyPassword_recovery_mail" = "";
-"forgotMyPassword_security_question" = "";
-"forgotMyPassword_continue" = "";
-"forgotMyPassword_email_popup_message" = "";
-"forgotMyPassword_challange2_header" = "";
-"forgotMyPassword_challange2_body" = "";
+"forgotMyPassword_your_account_email" = "Correo electrónico o número de teléfono de su cuenta";
+"forgotMyPassword_enter_your_account_email" = "Ingrese el correo electrónico o número de teléfono de su cuenta";
+"forgotMyPassword_instructions" = "Para restablecer su contraseña, le enviaremos un enlace de restablecimiento de contraseña a la dirección de correo electrónico o al número de teléfono de su cuenta:";
+"forgotMyPassword_enter_valid_email" = "Ingrese un correo electrónico o número de teléfono válido";
+"forgotMyPassword_instructions_other" = "Puede restablecer su contraseña haciendo clic en el enlace que le enviaremos a su dirección de correo electrónico o número de teléfono de su cuenta.";
+"forgotMyPassword_reset_button" = "Restablecer la Contraseña";
+"forgotMyPassword_challange1_header" = "Elija el Método de Verificación";
+"forgotMyPassword_challange1_body" = "¿Cuál de los siguientes métodos de verificación le gustaría utilizar durante el flujo de renovación de contraseña?";
+"forgotMyPassword_phone_number" = "Número de Teléfono";
+"forgotMyPassword_mail" = "Correo Electrónico";
+"forgotMyPassword_recovery_mail" = "Correo Electrónico de Recuperación";
+"forgotMyPassword_security_question" = "Pregunta de Seguridad";
+"forgotMyPassword_continue" = "Continuar";
+"forgotMyPassword_email_popup_message" = "Hemos enviado un enlace para restablecer la contraseña a su dirección de correo electrónico% @ para que pueda restablecer su contraseña.";
+"forgotMyPassword_challange2_header" = "Elija el Método de Verificación";
+"forgotMyPassword_challange2_body" = "¿Cuál de los siguientes métodos de verificación le gustaría utilizar durante el flujo de renovación de contraseña?";
 "masterpass_feature_package_cancel" = "Para cancelar su paquete, visite www.mylifebox.com";
+"forgotMyPassword_password_complete" = "OK";
+"forgotMyPassword_reset_success_message" = "Su restablecimiento de contraseña se ha completado con éxito.";
+"forgotMyPassword_account_not_found" = "";
+"forgotMyPassword_SQ_invalid_answer" = "";
+
+/*Photo/Video File Description*/
+"photo_video_detail_file_description" = "";
