--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2183,22 +2183,29 @@ Please check I have understood the intended command here*/
 "profile_recovery_email_empty" = "E-mail de récupération est vide";
 "profile_recovery_email_invalid" = "E-mail de récupération n'est pas valide";
 "package_period_x_months" = "%d mois";
-"invitation_share_message" = "Je vous invite à lifebox, inscrivez-vous et commencez à utiliser 5 GB de stockage.";
+"invitation_share_message" = "Vous avez reçu 5 Go de stockage lifebox, cliquez pour l'utiliser";
 "profile_recovery_email_is_same_with_account_email" = "L'e-mail de récupération et l'e-mail de profil ne peuvent pas être identiques.";
-"forgotMyPassword_your_account_email" = "";
-"forgotMyPassword_enter_your_account_email" = "";
-"forgotMyPassword_instructions" = "";
-"forgotMyPassword_enter_valid_email" = "";
-"forgotMyPassword_instructions_other" = "";
-"forgotMyPassword_reset_button" = "";
-"forgotMyPassword_challange1_header" = "";
-"forgotMyPassword_challange1_body" = "";
-"forgotMyPassword_phone_number" = "";
-"forgotMyPassword_mail" = "";
-"forgotMyPassword_recovery_mail" = "";
-"forgotMyPassword_security_question" = "";
-"forgotMyPassword_continue" = "";
-"forgotMyPassword_email_popup_message" = "";
-"forgotMyPassword_challange2_header" = "";
-"forgotMyPassword_challange2_body" = "";
+"forgotMyPassword_your_account_email" = "Email ou numéro de téléphone de votre compte";
+"forgotMyPassword_enter_your_account_email" = "Entrez votre e-mail ou votre numéro de téléphone";
+"forgotMyPassword_instructions" = "Nous enverrons un lien de réinitialisation de mot de passe à l'adresse e-mail ou au numéro de téléphone de votre compte pour réinitialiser votre mot de passe:";
+"forgotMyPassword_enter_valid_email" = "Veuillez entrer un email ou un numéro de téléphone valide";
+"forgotMyPassword_instructions_other" = "Vous pouvez réinitialiser votre mot de passe en cliquant sur le lien que nous vous enverrons à votre adresse e-mail ou au numéro de téléphone de votre compte.";
+"forgotMyPassword_reset_button" = "Réinitialisez le Mot de Passe";
+"forgotMyPassword_challange1_header" = "Choisissez la Méthode de Vérification";
+"forgotMyPassword_challange1_body" = "Laquelle des méthodes de vérification suivantes souhaitez-vous poursuivre avec le processus de renouvellement de mot de passe?";
+"forgotMyPassword_phone_number" = "Numéro de Téléphone";
+"forgotMyPassword_mail" = "E-mail";
+"forgotMyPassword_recovery_mail" = "Email de Récupération";
+"forgotMyPassword_security_question" = "Question de Sécurité";
+"forgotMyPassword_continue" = "Continuez";
+"forgotMyPassword_email_popup_message" = "Nous avons envoyé un lien de réinitialisation de mot de passe à votre adresse e-mail %@ pour que vous puissiez réinitialiser votre mot de passe.";
+"forgotMyPassword_challange2_header" = "Choisissez la Méthode de Vérification";
+"forgotMyPassword_challange2_body" = "Laquelle des méthodes de vérification suivantes souhaitez-vous poursuivre avec le processus de renouvellement de mot de passe?";
 "masterpass_feature_package_cancel" = "Pour annuler votre paquet, veuillez visiter www.mylifebox.com";
+"forgotMyPassword_password_complete" = "D'accord";
+"forgotMyPassword_reset_success_message" = "La réinitialisation de votre mot de passe a été effectuée avec succès.";
+"forgotMyPassword_account_not_found" = "";
+"forgotMyPassword_SQ_invalid_answer" = "";
+
+/*Photo/Video File Description*/
+"photo_video_detail_file_description" = "";
