--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1891,20 +1891,27 @@
 "package_period_x_months" = "%d месяц";
 "invitation_share_message" = "Приглашаю тебя в lifebox, зарегистрируйся и начни использовать хранилище в 5 ГБ.";
 "profile_recovery_email_is_same_with_account_email" = "Резервный адрес электронной почты и адрес электронной почты профиля не могут совпадать.";
-"forgotMyPassword_your_account_email" = "";
-"forgotMyPassword_enter_your_account_email" = "";
-"forgotMyPassword_instructions" = "";
-"forgotMyPassword_enter_valid_email" = "";
-"forgotMyPassword_instructions_other" = "";
-"forgotMyPassword_reset_button" = "";
-"forgotMyPassword_challange1_header" = "";
-"forgotMyPassword_challange1_body" = "";
-"forgotMyPassword_phone_number" = "";
-"forgotMyPassword_mail" = "";
-"forgotMyPassword_recovery_mail" = "";
-"forgotMyPassword_security_question" = "";
-"forgotMyPassword_continue" = "";
-"forgotMyPassword_email_popup_message" = "";
-"forgotMyPassword_challange2_header" = "";
-"forgotMyPassword_challange2_body" = "";
+"forgotMyPassword_your_account_email" = "Электронная почта или номер телефона вашей учетной записи";
+"forgotMyPassword_enter_your_account_email" = "Введите адрес электронной почты или номер телефона вашей учетной записи";
+"forgotMyPassword_instructions" = "Для сброса пароля мы отправим ссылку сброса пароля на адрес электронной почты или номер телефона вашей учетной записи:";
+"forgotMyPassword_enter_valid_email" = "Пожалуйста, введите действующий адрес электронной почты или номер телефона";
+"forgotMyPassword_instructions_other" = "Вы можете сбросить пароль, щелкнув по ссылке, которую мы отправим на ваш адрес электронной почты или номер телефона вашей учетной записи.";
+"forgotMyPassword_reset_button" = "Сброс Пароля";
+"forgotMyPassword_challange1_header" = "Выбрать Метод Подтверждения";
+"forgotMyPassword_challange1_body" = "С каким из следующих методов подтверждения вы хотите продолжить, для обновления пароля?";
+"forgotMyPassword_phone_number" = "Номер Телефона";
+"forgotMyPassword_mail" = "Электронная Почта";
+"forgotMyPassword_recovery_mail" = "Адрес Электронной Почты Восстановления";
+"forgotMyPassword_security_question" = "Контрольный Вопрос Безопасности";
+"forgotMyPassword_continue" = "Продолжить";
+"forgotMyPassword_email_popup_message" = "Мы отправили ссылку для сброса пароля на ваш адрес электронной почты %@, чтобы вы могли сбросить свой пароль.";
+"forgotMyPassword_challange2_header" = "Выбрать Метод Подтверждения";
+"forgotMyPassword_challange2_body" = "С каким из следующих методов подтверждения вы хотите продолжить, для обновления пароля?";
 "masterpass_feature_package_cancel" = "Чтобы отменить пакет, посетите сайт www.mylifebox.com";
+"forgotMyPassword_password_complete" = "Хорошо";
+"forgotMyPassword_reset_success_message" = "Смена пароля завершена успешно.";
+"forgotMyPassword_account_not_found" = "";
+"forgotMyPassword_SQ_invalid_answer" = "";
+
+/*Photo/Video File Description*/
+"photo_video_detail_file_description" = "";
