--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1920,20 +1920,27 @@
 "package_period_x_months" = "%d muaj";
 "invitation_share_message" = "Ju ftoj edhe juve në lifebox, regjistrohuni dhe filloni të përdorni hapësirë ruajtëse prej 5 GB.";
 "profile_recovery_email_is_same_with_account_email" = "Emaili i rikuperimit dhe e-maili i profilit nuk mund të jenë të njëjta.";
-"forgotMyPassword_your_account_email" = "";
-"forgotMyPassword_enter_your_account_email" = "";
-"forgotMyPassword_instructions" = "";
-"forgotMyPassword_enter_valid_email" = "";
-"forgotMyPassword_instructions_other" = "";
-"forgotMyPassword_reset_button" = "";
-"forgotMyPassword_challange1_header" = "";
-"forgotMyPassword_challange1_body" = "";
-"forgotMyPassword_phone_number" = "";
-"forgotMyPassword_mail" = "";
-"forgotMyPassword_recovery_mail" = "";
-"forgotMyPassword_security_question" = "";
-"forgotMyPassword_continue" = "";
-"forgotMyPassword_email_popup_message" = "";
-"forgotMyPassword_challange2_header" = "";
-"forgotMyPassword_challange2_body" = "";
+"forgotMyPassword_your_account_email" = "Email ose numrin e telefonit të llogarisë tuaj";
+"forgotMyPassword_enter_your_account_email" = "Vendosni email -in ose numrin e telefonit të llogarisë tuaj";
+"forgotMyPassword_instructions" = "Për të rivendosur fjalëkalimin tuaj, ne do të dërgojmë një lidhje për rivendosjen e fjalëkalimit në adresën e emailit ose numrin e telefonit të llogarisë tuaj:";
+"forgotMyPassword_enter_valid_email" = "Ju lutemi shkruani një email ose numër telefoni të vlefshëm";
+"forgotMyPassword_instructions_other" = "Ju mund të rivendosni fjalëkalimin tuaj duke klikuar lidhjen që do të dërgojmë në adresën tuaj të postës elektronike ose numrin e telefonit të llogarisë tuaj.";
+"forgotMyPassword_reset_button" = "Risetoni Fjalëkalimin";
+"forgotMyPassword_challange1_header" = "Zgjidhni Metodën e Verifikimit";
+"forgotMyPassword_challange1_body" = "Cilën nga metodat e mëposhtme të verifikimit dëshironi të përdorni gjatë rrjedhës së rinovimit të fjalëkalimit?";
+"forgotMyPassword_phone_number" = "Numri i Telefonit";
+"forgotMyPassword_mail" = "E-mail";
+"forgotMyPassword_recovery_mail" = "Email -i i rikuperimit";
+"forgotMyPassword_security_question" = "Pyetje Sigurie";
+"forgotMyPassword_continue" = "Vazhdo";
+"forgotMyPassword_email_popup_message" = "Ne kemi dërguar një lidhje për rivendosjen e fjalëkalimit në adresën tuaj të postës elektronike %@, në mënyrë që t'ju lejojmë të rivendosni fjalëkalimin tuaj.";
+"forgotMyPassword_challange2_header" = "Zgjidhni Metodën e Verifikimit";
+"forgotMyPassword_challange2_body" = "Cilën nga metodat e mëposhtme të verifikimit dëshironi të përdorni gjatë rrjedhës së rinovimit të fjalëkalimit?";
 "masterpass_feature_package_cancel" = "Për të anuluar paketën tuaj, ju lutemi, vizitoni www.mylifebox.com -in";
+"forgotMyPassword_password_complete" = "Ne rregull";
+"forgotMyPassword_reset_success_message" = "Rivendosja e fjalëkalimit tuaj u krye  me sukses.";
+"forgotMyPassword_account_not_found" = "";
+"forgotMyPassword_SQ_invalid_answer" = "";
+
+/*Photo/Video File Description*/
+"photo_video_detail_file_description" = "";
