--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1921,7 +1921,7 @@
 "profile_recovery_mail_hint" = "You haven't added a recovery email to your account yet";
 "profile_mail_verified" = "Verified";
 "profile_verify" = "Verify";
-"masterpass_quota_package_cancel" = "To cancel your package, please visit www.mylifebox.com";
+"masterpass_quota_package_cancel" = "You can visit www.mylifebox.com to cancel your package.";
 "profile_recovery_email_empty" = "Recovery e-mail is empty";
 "profile_recovery_email_invalid" = "Recovery e-mail field is invalid";
 "package_period_x_months" = "%d months";
@@ -1930,7 +1930,7 @@
 "forgotMyPassword_your_account_email" = "Your e-mail or phone number associated with your account";
 "forgotMyPassword_enter_your_account_email" = "Enter your e-mail or phone number associated with your account";
 "forgotMyPassword_instructions" = "To reset your password we will send a link to your e-mail associated with your account:";
-"forgotMyPassword_enter_valid_email" = "Please enter a valid email or phone number";
+"forgotMyPassword_enter_valid_email" = "Please enter a valid e-mail or phone number";
 "forgotMyPassword_instructions_other" = "To reset your password you can click the link that will be sent to your e-mail associated with your account.";
 "forgotMyPassword_reset_button" = "Reset Password";
 "forgotMyPassword_challange1_header" = "Please Select a Verification Method";
@@ -1943,4 +1943,11 @@
 "forgotMyPassword_email_popup_message" = "We have sent a link to your %@ e-mail to reset your password.";
 "forgotMyPassword_challange2_header" = "Please Select a Verification Method";
 "forgotMyPassword_challange2_body" = "To reset your password, which verification method would you like to continue with?";
-"masterpass_feature_package_cancel" = "To cancel your package, please visit www.mylifebox.com";
+"masterpass_feature_package_cancel" = "You can visit www.mylifebox.com to cancel your package.";
+"forgotMyPassword_password_complete" = "OK";
+"forgotMyPassword_reset_success_message" = "Şifre yenileme işleminiz başarıyla tamamlandı.";
+"forgotMyPassword_account_not_found" = "";
+"forgotMyPassword_SQ_invalid_answer" = "Invalid answer!";
+
+/*Photo/Video File Description*/
+"photo_video_detail_file_description" = "File Description";
