--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1947,7 +1947,28 @@
 "forgotMyPassword_password_complete" = "OK";
 "forgotMyPassword_reset_success_message" = "Şifre yenileme işleminiz başarıyla tamamlandı.";
 "forgotMyPassword_account_not_found" = "";
-"forgotMyPassword_SQ_invalid_answer" = "Invalid answer!";
+"forgotMyPassword_SQ_invalid_answer" = "Your security question answer is wrong, please try again.";
 
 /*Photo/Video File Description*/
 "photo_video_detail_file_description" = "File Description";
+"DELETE_ACC_BTN" = "Hesabımı Sil";
+"DELETE_ACC_DESC" = "Hesap silme işlemi yaparsan; fotoğrafların, videoların, rehberin, tüm içerik ve bilgilerin 30 gün sonrasında kalıcı olarak silinir. Bu süreden sonra içeriklerini geri getiremezsin. Silme işleminden sonraki 30 gün içinde hesabına giriş yaparsan, hesap silme talebini otomatik olarak iptal edeceğiz ve hesabını kullanmaya devam edebileceksin. Hesabını silmeden önce lifebox hesabında kayıtlı bir içeriğin varsa, hesap silme işleminden önce içeriklerini indirmeni öneririz.";
+"DELETE_ACC_FIRST_POP_UP_TITLE" = "Hesabını silmek istediğine emin misin?";
+"DELETE_ACC_POP_UP_CONTENT_FIRST" = "Hesabını silmeden önce, önemli verilerini kaybetmemek için fotoğraflarını, videolarını ve hesabında sakladığın tüm içeriklerini indirdiğinden emin ol!";
+"DELETE_ACC_POP_UP_CONTENT_SECOND" = "Şifreni girerek hesabını doğruladıktan sonra hesabın kalıcı olarak silinecektir.\n\nLifebox hesabını tekrar aktive etmek istersen, silme işleminden sonra 30 gün içinde hesap bilgilerinle giriş yapabilirsin. Giriş yapmadığın durumda hesabın ve içeriklerin bu süreden sonra silinir.";
+"DELETE_ACC_INPUT_GSM" = "Telefon Numarası";
+"DELETE_ACC_INPUT_PASS" = "Şifre";
+"DELETE_ACC_PASS_ERROR" = "Hatalı şifre girdiniz.";
+"DELETE_ACC_THIRD_POP_UP_TITLE" = "Hesabın kalıcı olarak silinecektir.";
+"DELETE_ACC_POP_UP_CONTENT_THIRD" = "Lifebox hesabını tekrar aktive etmek istersen, silme işleminden sonra 30 gün içinde hesap bilgilerinle giriş yapabilirsin. Giriş yapmadığın durumda hesabın ve içeriklerin bu süreden sonra silinir.";
+"DELETE_ACC_FINAL_POP_UP_TITLE" = "Hesabını başarılı olarak sildin.";
+"DELETE_ACC_POP_UP_CONTENT_FINAL" = "**Gittiğin için üzgünüz :(**\n\nLütfen şunu bil, içeriklerini 30 gün saklamaya devam edeceğiz. Bu süre içerisinde hesap bilgilerinle giriş yaparsan, hesabın aktive olacaktır. Herhangi bir değişiklik yapmadan hesabını kullanmaya devam edebilirsin.";
+"DELETE_ACC_POP_UP_BTN_DELETE" = "Hesabımı Sil";
+"DELETE_ACC_POP_UP_BTN_CANCEL" = "İptal";
+"DELETE_ACC_POP_UP_BTN_CONTINUE" = "Devam Et";
+"DELETE_ACC_POP_UP_BTN_CONFIRM" = "Onayla";
+"DELETE_ACC_POP_UP_BTN_CLOSE" = "Kapat";
+
+/*Change album cover photo*/
+"change_album_cover_snackbar_text" = "";
+"change_album_cover_error_text" = "";
