--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1939,7 +1939,28 @@
 "forgotMyPassword_password_complete" = "OK";
 "forgotMyPassword_reset_success_message" = "Su restablecimiento de contraseña se ha completado con éxito.";
 "forgotMyPassword_account_not_found" = "";
-"forgotMyPassword_SQ_invalid_answer" = "";
+"forgotMyPassword_SQ_invalid_answer" = "Tu respuesta a la pregunta de seguridad es incorrecta, por favor vuelva a intentarlo.";
 
 /*Photo/Video File Description*/
-"photo_video_detail_file_description" = "";
+"photo_video_detail_file_description" = "Inscripción de Folio";
+"DELETE_ACC_BTN" = "";
+"DELETE_ACC_DESC" = "";
+"DELETE_ACC_FIRST_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_FIRST" = "";
+"DELETE_ACC_POP_UP_CONTENT_SECOND" = "";
+"DELETE_ACC_INPUT_GSM" = "";
+"DELETE_ACC_INPUT_PASS" = "";
+"DELETE_ACC_PASS_ERROR" = "";
+"DELETE_ACC_THIRD_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_THIRD" = "";
+"DELETE_ACC_FINAL_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_FINAL" = "";
+"DELETE_ACC_POP_UP_BTN_DELETE" = "";
+"DELETE_ACC_POP_UP_BTN_CANCEL" = "";
+"DELETE_ACC_POP_UP_BTN_CONTINUE" = "";
+"DELETE_ACC_POP_UP_BTN_CONFIRM" = "";
+"DELETE_ACC_POP_UP_BTN_CLOSE" = "";
+
+/*Change album cover photo*/
+"change_album_cover_snackbar_text" = "";
+"change_album_cover_error_text" = "";
