--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2205,7 +2205,28 @@ Please check I have understood the intended command here*/
 "forgotMyPassword_password_complete" = "D'accord";
 "forgotMyPassword_reset_success_message" = "La réinitialisation de votre mot de passe a été effectuée avec succès.";
 "forgotMyPassword_account_not_found" = "";
-"forgotMyPassword_SQ_invalid_answer" = "";
+"forgotMyPassword_SQ_invalid_answer" = "La réponse à votre question de sécurité est incorrecte, veuillez réessayer.";
 
 /*Photo/Video File Description*/
-"photo_video_detail_file_description" = "";
+"photo_video_detail_file_description" = "Description du Dossier";
+"DELETE_ACC_BTN" = "";
+"DELETE_ACC_DESC" = "";
+"DELETE_ACC_FIRST_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_FIRST" = "";
+"DELETE_ACC_POP_UP_CONTENT_SECOND" = "";
+"DELETE_ACC_INPUT_GSM" = "";
+"DELETE_ACC_INPUT_PASS" = "";
+"DELETE_ACC_PASS_ERROR" = "";
+"DELETE_ACC_THIRD_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_THIRD" = "";
+"DELETE_ACC_FINAL_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_FINAL" = "";
+"DELETE_ACC_POP_UP_BTN_DELETE" = "";
+"DELETE_ACC_POP_UP_BTN_CANCEL" = "";
+"DELETE_ACC_POP_UP_BTN_CONTINUE" = "";
+"DELETE_ACC_POP_UP_BTN_CONFIRM" = "";
+"DELETE_ACC_POP_UP_BTN_CLOSE" = "";
+
+/*Change album cover photo*/
+"change_album_cover_snackbar_text" = "";
+"change_album_cover_error_text" = "";
