--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1940,7 +1940,28 @@
 "forgotMyPassword_password_complete" = "Ne rregull";
 "forgotMyPassword_reset_success_message" = "Rivendosja e fjalëkalimit tuaj u krye  me sukses.";
 "forgotMyPassword_account_not_found" = "";
-"forgotMyPassword_SQ_invalid_answer" = "";
+"forgotMyPassword_SQ_invalid_answer" = "Përgjigjia juaj e pyetjes së sigurisë është e gabuar,ju lutemi provojeni përsëri.";
 
 /*Photo/Video File Description*/
-"photo_video_detail_file_description" = "";
+"photo_video_detail_file_description" = "Shpjegimi i Skedarit";
+"DELETE_ACC_BTN" = "";
+"DELETE_ACC_DESC" = "";
+"DELETE_ACC_FIRST_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_FIRST" = "";
+"DELETE_ACC_POP_UP_CONTENT_SECOND" = "";
+"DELETE_ACC_INPUT_GSM" = "";
+"DELETE_ACC_INPUT_PASS" = "";
+"DELETE_ACC_PASS_ERROR" = "";
+"DELETE_ACC_THIRD_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_THIRD" = "";
+"DELETE_ACC_FINAL_POP_UP_TITLE" = "";
+"DELETE_ACC_POP_UP_CONTENT_FINAL" = "";
+"DELETE_ACC_POP_UP_BTN_DELETE" = "";
+"DELETE_ACC_POP_UP_BTN_CANCEL" = "";
+"DELETE_ACC_POP_UP_BTN_CONTINUE" = "";
+"DELETE_ACC_POP_UP_BTN_CONFIRM" = "";
+"DELETE_ACC_POP_UP_BTN_CLOSE" = "";
+
+/*Change album cover photo*/
+"change_album_cover_snackbar_text" = "";
+"change_album_cover_error_text" = "";
