--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1965,3 +1965,4 @@
 /*Change album cover photo*/
 "change_album_cover_snackbar_text" = "";
 "change_album_cover_error_text" = "";
+"change_album_cover_set_photo" = "";
