--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1938,5 +1938,6 @@
 "DELETE_ACC_POP_UP_BTN_CLOSE" = "";
 
 /*Change album cover photo*/
-"change_album_cover_snackbar_text" = "";
-"change_album_cover_error_text" = "";
+"change_album_cover_snackbar_text" = "Kapak fotoğrafı başarıyla güncellendi.";
+"change_album_cover_error_text" = "Kapak fotoğrafı değişimi sırasında bir hata oluştu.";
+"change_album_cover_set_photo" = "Albüm kapağı olarak kullan";
