--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1934,3 +1934,4 @@
 /*Change album cover photo*/
 "change_album_cover_snackbar_text" = "";
 "change_album_cover_error_text" = "";
+"change_album_cover_set_photo" = "";
